# FileManager122

./: README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-alpha.yml  publish-beta.yml  publish.yml
src/: layout.tsx  main.css  main.tsx  page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/icons/: macos.rs  mod.rs  windows.rs
src/components/: file-icon.tsx  file-list.tsx  file-row.tsx  folder-list.tsx  folder-node.tsx  icons.tsx  navbar.tsx  sidebar.tsx
src/components/ui/: button.tsx
src/home/: page.tsx
src/lib/: consts.ts  icon-cache.ts  types.d.ts  useInView.ts
